--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches: ["master", "main"]
   workflow_dispatch:
+  
 
 permissions:
   contents: read
@@ -40,7 +41,7 @@ jobs:
   deploy:
     name: Deploy to IIS
     runs-on: windows-latest
-    needs: build
+    needs: build   # 🔒 DEPLOY ONLY AFTER BUILD SUCCESS
 
     steps:
     - name: Download Build Artifact
@@ -48,30 +49,14 @@ jobs:
       with:
         name: dotnet9-publish
         path: publish
-
-    - name: Deploy using MSDeploy
-      shell: pwsh
-      env:
-        IIS_SITE_NAME: ${{ secrets.IIS_SITE_NAME }}
-        IIS_SERVER: ${{ secrets.IIS_SERVER }}
-        IIS_USERNAME: ${{ secrets.IIS_USERNAME }}
-        IIS_PASSWORD: ${{ secrets.IIS_PASSWORD }}
+ 
+    - name: Deploy with msdeploy
+      shell: powershell
       run: |
-        $msdeploy = 'C:\Program Files\IIS\Microsoft Web Deploy V3\msdeploy.exe'
-        if (-not (Test-Path $msdeploy)) {
-          Write-Error "msdeploy.exe not found at $msdeploy"
-          exit 1
-        }
+          $msdeploy = "C:\Program Files\IIS\Microsoft Web Deploy V3\msdeploy.exe"
+          $package = Join-Path $env:RUNNER_TEMP "${{ env.ARTIFACT_NAME }}.zip"
 
-        # Read secrets from environment (avoids ${{ }} in the inline script)
-        $site   = $env:IIS_SITE_NAME
-        $server = $env:IIS_SERVER
-        $user   = $env:IIS_USERNAME
-        $pass   = $env:IIS_PASSWORD
+          # Use single quotes for values that may contain $ or $(...)
+          $dest = "auto,ComputerName='https://${{ secrets.IIS_SERVER }}:8172/msdeploy.axd?site=${{ secrets.IIS_SITE_NAME }}',UserName='${{ secrets.DEPLOY_USER }}',Password='${{ secrets.DEPLOY_PASSWORD }}',AuthType='Basic'"
 
-        # Build provider strings using single quotes inside the provider values so PowerShell
-        # doesn't treat any $ or $(...) sequences as subexpressions
-        $source = "contentPath='publish'"
-        $dest   = "contentPath='$site',computerName='https://$server:8172/msdeploy.axd',userName='$user',password='$pass',authType='Basic'"
-
-        & "$msdeploy" -verb:sync "-source:$source" "-dest:$dest" -allowUntrusted -enableRule:AppOffline
+          & "$msdeploy" -verb:sync -source:package="$package" -dest:$dest -allowUntrusted
