--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,7 +40,7 @@ jobs:
   deploy:
     name: Deploy to IIS
     runs-on: windows-latest
-    needs: build
+    needs: build   # ✅ deploy runs ONLY after build succeeds
 
     steps:
     - name: Download Build Artifact
@@ -56,58 +56,33 @@ jobs:
         IIS_SERVER: ${{ secrets.IIS_SERVER }}
         IIS_USERNAME: ${{ secrets.IIS_USERNAME }}
         IIS_PASSWORD: ${{ secrets.IIS_PASSWORD }}
-        ARTIFACT_NAME: dotnet9-publish
       run: |
-        $msdeploy = 'C:\Program Files\IIS\Microsoft Web Deploy V3\msdeploy.exe'
+        $msdeploy = "C:\Program Files\IIS\Microsoft Web Deploy V3\msdeploy.exe"
+
         if (-not (Test-Path $msdeploy)) {
-          Write-Error "msdeploy.exe not found at $msdeploy"
+          Write-Error "msdeploy.exe not found"
           exit 1
         }
 
-        # Read and validate required inputs
-        $site   = $env:IIS_SITE_NAME
-        $server = $env:IIS_SERVER
-        $user   = $env:IIS_USERNAME
-        $pass   = $env:IIS_PASSWORD
-
-        if (-not $server) {
-          Write-Error "IIS_SERVER secret is empty. Set the secret 'IIS_SERVER' in repository settings."
+        if ([string]::IsNullOrWhiteSpace($env:IIS_SERVER)) {
+          Write-Error "IIS_SERVER secret is missing"
           exit 1
         }
-        if (-not $site) {
-          Write-Error "IIS_SITE_NAME secret is empty. Set the secret 'IIS_SITE_NAME' in repository settings."
+        if ([string]::IsNullOrWhiteSpace($env:IIS_SITE_NAME)) {
+          Write-Error "IIS_SITE_NAME secret is missing"
           exit 1
         }
 
-        # Normalize server into a proper MSDeploy computerName URL
-        if ($server -match '^https?://') {
-          $base = $server.TrimEnd('/')
-          if ($base -notmatch '/msdeploy.axd$') {
-            $computerUrl = "$base/msdeploy.axd?site=$site"
-          } else {
-            $computerUrl = "$base?site=$site"
-          }
-        } else {
-          $computerUrl = "https://$server:8172/msdeploy.axd?site=$site"
-        }
+        $computerName = "https://$($env:IIS_SERVER):8172/msdeploy.axd"
 
-        # Create package zip for msdeploy
-        $publishDir = (Resolve-Path -Path 'publish' -ErrorAction Stop).Path
-        $zip = Join-Path $env:RUNNER_TEMP "$($env:ARTIFACT_NAME).zip"
-        if (Test-Path $zip) { Remove-Item $zip -Force }
-        Compress-Archive -Path (Join-Path $publishDir '*') -DestinationPath $zip -Force
+        Write-Host "Deploying to IIS site '$($env:IIS_SITE_NAME)' on server '$($env:IIS_SERVER)'"
 
-        if (-not (Test-Path $zip)) {
-          Write-Error "Package not created: $zip"
-          exit 1
-        }
-
-        # Build msdeploy provider strings
-        $source = "package='$zip'"
-        $dest   = "auto,computerName='$computerUrl',userName='$user',password='$pass',authType='Basic'"
-
-        Write-Host "Deploying package $zip to site '$site' on server '$server'"
-        & "$msdeploy" -verb:sync "-source:$source" "-dest:$dest" -allowUntrusted -enableRule:AppOffline
+        & $msdeploy `
+          -verb:sync `
+          -source:contentPath="publish" `
+          -dest:contentPath="$($env:IIS_SITE_NAME)",computerName="$computerName",userName="$($env:IIS_USERNAME)",password="$($env:IIS_PASSWORD)",authType="Basic" `
+          -allowUntrusted `
+          -enableRule:AppOffline
 
         if ($LASTEXITCODE -ne 0) {
           Write-Error "msdeploy failed with exit code $LASTEXITCODE"
